Crash baking textures with Cycles Metal #125863
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#125863
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-14.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M3 1.2
Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash:
a51f293548ad
Broken: 4.1.1
Worked: don't know
Short description of error
Blender always crashes on baking
Exact steps for others to reproduce the error
Now do the same but turn Indirect lighting off, it no longer crashes (for me).
Influence > Contributions > [ ] Indirect
I can confirm the issue on a Mac with M1 Pro when using the GPU for render, but can not reproduce it with CPU rendering, or a Windows computer with a NVIDIA RTX 4090. So I will assume this issue is limited to the Metal backend for Cycles.
I can also only reproduce this issue with "large" textures that textures are being baked too. For example, the file uses 4096x4096 texture, but if a 1024x1024 texture is used instead, I can't reproduce the issue.
The crash seems to occur when writing pixels to the render passes.
I will set to high priority on the "crashes should be high priority" guideline. But the Cycles team is free to change this.
100% Guaranteed crash on bake with Indirect lightingto Crash baking textures with Cycles Metalhmm, can not reproduce in 4.3
I'm still able to reproduce in 4.3. I have attached a crash log.
System Information
Operating system: macOS-14.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-08-05 12:54, hash:
f6e6f2b2d222
Is clicking
Render -> Bake -> Bake
from the attached scene enough to reproduce the crash? In that case I can reproduce in 4.2 with the same crash log, but not with 4.3f6e6f2b2d222
, not even the earliest 4.3 download I can find on https://builder.blender.org/download/daily/ (e114467a5463
)System Information
Operating system: macOS-14.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Max 1.2
For me, yes, selecting
Render Properties -> Bake -> Bake
in the provided .blend file is all that's need to reproduce the crash in 4.3